feat - add swagger and actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port = 8083
 spring.datasource.url=jdbc:mysql://localhost:3306/tastejoydb
 spring.datasource.username=root
 spring.datasource.password=Isuru
+management.endpoints.web.exposure.include=*
