--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -84,6 +87,12 @@
 	        <artifactId>thymeleaf-extras-springsecurity5</artifactId>
 	        <version>3.0.4.RELEASE</version>
 	    </dependency>
+	    
+	     <dependency>
+		      <groupId>org.springdoc</groupId>
+		      <artifactId>springdoc-openapi-ui</artifactId>
+		      <version>1.6.4</version>
+		   </dependency>
 	</dependencies>
 
 	<build>
